create-weather-proto-and-service

--- a/GrpcService.Server/GrpcService.Server.csproj
+++ b/GrpcService.Server/GrpcService.Server.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+        <Protobuf Include="Protos\weather.proto" GrpcServices="Server" />
     </ItemGroup>
 
     <ItemGroup>
